--- a/VRChat/77/1339977.html
+++ b/VRChat/77/1339977.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "UhfAZHqnZbF0e4ZHaD8k+jKGVAlmVFfrzrY1XWrtJ74="></script>
+    "DeWzzBOggYYn66Vky5U+XixnHzHdv+8BHsrLy7YGHxw="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRC向け「バイクキーホルダー(ネイキッドver.)」","description":"バイクの形のキーホルダーを作ったのだ！\n\nVRChatでアバターに身に付けたりするとよいのだ！\n\nポリゴン数は▲1028\nダイナミックボーンの値も設定済なのだ！\n（ダイナミックボーンはunityの有償アセットなのだ、揺らしたい場合はそっちを先にインポートしてから入れるとよいのだ）\n\nVRC向けのunitypackageになっているのだ！\n\n要望や不具合などがあったらTwitterのDMまで知らせてほしいのだ！","url":"https://booth.pm/ja/items/1339977","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/8d9d1fb7-104d-4c64-8a88-79480e72d300/i/1339977/e0d29ff5-e052-4c6f-a55c-a0a276257cb0_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="UhfAZHqnZbF0e4ZHaD8k+jKGVAlmVFfrzrY1XWrtJ74="></script>
+    nonce="DeWzzBOggYYn66Vky5U+XixnHzHdv+8BHsrLy7YGHxw="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -480,9 +480,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
