--- a/VRChat/19/1339919.html
+++ b/VRChat/19/1339919.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "xVG7++X4dqsWay1jLO1Z/6LxR3Sv8OGYkrS+IAHV1cA="></script>
+    "g9SrqHjEMylUOiA8Z1jNn83wvGOoGjy0F5QJTRXIJ8M="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"令和の空気たっぷり缶詰 3Dモデル","description":"”缶詰”の3Dモデル紹介\n\n新元号に変わったので初日の空気を電子的に取り込み\n3Dモデルに落とし込むことが成功しました！！\n\nこの令和の空気を電子内でも感じれるようにここに置いておきます。\n\nシェイプキーで蓋を開けて中身を散布することもできます。\n相手に令和を感じさせてやりましょう！\n\n\n本セットは【VRChat】向けに作成したものです。\nというかなんでもありです。\n\n●内容物\n\n・令和の缶詰.unitypackage\n・FBXデータ,Blenderファイル,UVファイル,Texファイル\n・画像資料\n・Readme\n\n\n------------------------------\n\n●利用条件\n\nなんでもあり\n\n●免責事項\n\n・本データを使用し、何れかの不都合が生じたとしても当方は責任はさすがに負いかねますのでご了承ください。\n\n\n■禁止事項\n\n・公序良俗に反する行為、政治・宗教活動、誹謗中傷目的での使用","url":"https://booth.pm/ja/items/1339919","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/266c358f-8e7e-41bc-bd4e-a1da54b572e7/i/1339919/3ec3455f-f86c-4e62-b46e-594a0edd85fa_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="xVG7++X4dqsWay1jLO1Z/6LxR3Sv8OGYkrS+IAHV1cA="></script>
+    nonce="g9SrqHjEMylUOiA8Z1jNn83wvGOoGjy0F5QJTRXIJ8M="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -350,9 +350,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
