--- a/VRChat/90/1339390.html
+++ b/VRChat/90/1339390.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "fnfdR/D5M8S+FAeED9t/qcmi46a5YLen2N70EIFXI6I="></script>
+    "mFvHIux7vay0y7z/BmKmDBSR86CiWeFxeaQKsVrmtVw="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【3Dモデル】AF-002 BrandAngriff V2","description":"火力強化型の量産型機動兵器\n\n近接突撃仕様のTypeAと火力制圧型のTypeDの2種類の武装\n\nAVATARS 3.0対応\n\n導入時はSDK3-Avatarsを使用してください。\n\nVRChatでの仕様を想定していますが、利用規約の範囲内であればゲーム・動画等その他の用途での使用も可能です。","url":"https://booth.pm/ja/items/1339390","offers":{"priceCurrency":"JPY","@type":"Offer","price":"3500"},"image":"https://booth.pximg.net/c/620x620/d3d523d1-e84d-4b41-911c-4b8144839726/i/1339390/4e9bb5ec-37d4-4789-979f-ea283e3e5b4f_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="fnfdR/D5M8S+FAeED9t/qcmi46a5YLen2N70EIFXI6I="></script>
+    nonce="mFvHIux7vay0y7z/BmKmDBSR86CiWeFxeaQKsVrmtVw="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -615,9 +615,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
