--- a/VRChat/08/1332408.html
+++ b/VRChat/08/1332408.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "jSqBX9KlkYnO6qZ9YsTcBafKD6UbdwWXBzs9Qyv3BkY="></script>
+    "8XC/2UNXYQp39bzKO8DC956gfXSMpRWF78XGQFX8oXw="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ツインテールリボン","description":"VRChat使用想定　　ツインテールリボン\n\n\n内容物\n・ツインテールリボン.unitypackage\n・UVテンプレート\n\nモデル概要\n\nポリゴン数：356\nマテリアル数：1\n\nボーン入ってるのでダイナミックボーンの適応もできます。\n片側のみでの使用もできます。\n\n\n改変可・再配布不可です。","url":"https://booth.pm/ja/items/1332408","offers":{"priceCurrency":"JPY","@type":"Offer","price":"300"},"image":"https://booth.pximg.net/c/620x620/c5e6ca9e-0060-44bc-918c-e161cccb358b/i/1332408/cb62f264-7a64-4b80-b678-3318dcb0ee6a_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="jSqBX9KlkYnO6qZ9YsTcBafKD6UbdwWXBzs9Qyv3BkY="></script>
+    nonce="8XC/2UNXYQp39bzKO8DC956gfXSMpRWF78XGQFX8oXw="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -405,9 +405,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
