--- a/VRChat/65/1332365.html
+++ b/VRChat/65/1332365.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "IRrfbvFEF9FAEB0uQtk+lW8cA0cJHvTKqSu3x8oIup4="></script>
+    "dFE8nXEFokKC9hMZpL2smOCX4B+HCQoqQ94wqQQAMIM="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"Away From Keyboard　Tシャツ","description":"ちょっとおしゃれなクソTです。\n価格は大体がクソT代なので勘弁して！\n\nAFKTの黒はこちら　https://mrtake.booth.pm/items/2108786\n\nこの商品はpixivFACTORYで作られた商品です。サンプル画像は完成イメージのため、実物と異なる場合があります。","url":"https://booth.pm/ja/items/1332365","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"3150","highPrice":"3150"},"image":"https://booth.pximg.net/c/620x620/48d020b0-2d30-4465-8012-7b84ca8b967d/i/1332365/e1197327-7747-43dd-a94c-17fd6932a5a4_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="IRrfbvFEF9FAEB0uQtk+lW8cA0cJHvTKqSu3x8oIup4="></script>
+    nonce="dFE8nXEFokKC9hMZpL2smOCX4B+HCQoqQ94wqQQAMIM="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -649,9 +649,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
