--- a/VRChat/24/1330324.html
+++ b/VRChat/24/1330324.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "1DiLu6e4EjC6kDgxGVgr/awlP87pZLheOci+iCs5GSc="></script>
+    "iqbJTr6I5+ksbV0mXw/zkxnI1uMk9wp5NTZMdJTFdHk="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"DXトチエイターなりきりヘッドセット","description":"VRChatアバターアクセサリー想定\n「DXトチエイターなりきりヘッドセット」\n\n\n栃木県のリアルでもバーチャルでも活動する創造戦士トチエイターのヘッドパーツをデフォルメしてなりきりが出来る！\n\nこんな方におすすめ\n・創造戦士トチエイターが好き\n・栃木県に住んでいる\n・栃木県が好き\n・栃木県に住みたい\n・名前に「と」か「ち」か「ぎ」入っている\n\n\n\n","url":"https://booth.pm/ja/items/1330324","offers":{"priceCurrency":"JPY","@type":"Offer","price":"500"},"image":"https://booth.pximg.net/c/620x620/231596dc-ef1f-43b0-bcba-06d4d38954dc/i/1330324/fbc852af-d741-4879-8d74-bae891dea55c_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="1DiLu6e4EjC6kDgxGVgr/awlP87pZLheOci+iCs5GSc="></script>
+    nonce="iqbJTr6I5+ksbV0mXw/zkxnI1uMk9wp5NTZMdJTFdHk="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -444,9 +444,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
