--- a/VRChat/00/1332100.html
+++ b/VRChat/00/1332100.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "UzYydgTQ8+q5iyXiYQXX3O6BWrvGl3tVktTSoefLCSM="></script>
+    "UdfdUXtheXJ/oakPVsTlmm7/M6vnAUL3vs/UjqcVijg="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"DesktopWalker","description":"Unity上でキャラクターを動かすサンプルです。WallpaperEngineがあればデスクトップ画面にキャラクターを表示することができます。マウスに視線が追従し、クリックした場所にキャラクターが移動します。\n\n～規約\n・本製品を使って発生した問題に対しては製作者は一切の責任を負いません。\n・アニメーションファイルはユニティちゃんライセンス© Unity Technologies Japan/UCL の元再配布しています。\n許可事項\n・改変・解析\n禁止事項\n・迷惑行為等\n\n【導入手順】\n①任意のシーン上に\"systemobject\"をドロップする。\n②\"Plane\"のPositionとScaleを床に合わせる(Rotationはいじってはいけない)。\n③キャラクターのモデルデータをシーンに配置する。\n④キャラクターに\"avatarAnimator\"と\"AvatarControll\"と\"IKLookat\"をドロップする。\n⑤\"AvatarControll\"と\"IKLookat\"のそれぞれの\"LookAtObj\"に\"systemobject/lookat\"を、\"WalkAtObj\"に\"systemobject/walkat\"をドロップする。\n\n⑥File/Build\u0026Runからexeファイルをエクスポートする。\n⑦WallpaperEngineにexeファイルをドロップする。\n\n\n【項目説明】\nLookAtObj : 任意のゲームオブジェクトにドロップしてください。マウスに追従します。\n LookDepth : キャラクターの目線がカメラから何メートルの位置に向くか指定します。(AvaterObjがnullの時)\n AvatarObj : ここにキャラクターを指定すると、LookDepthの値がキャラクター基準になります。\nWalkAtObj : 任意のゲームオブジェクトにドロップしてください。マウスクリックで移動します。\n Plane : 床となるplaneオブジェクトを指定してください。positionとscaleは計算しますが、rotationが考慮しないので注意してください。\n\nIKLookAt : キャラクターにドロップしてください。目線の制御をします。\n LookAtObj : LookAtObjをドロップしたオブジェクトを指定してください。アバターの視線が追従します。\n LookAtWeight : どれくらいの鈍さで視線を向けるか。\n BodyWeight : どれくらい体を動かすか。\n HeadWeight : どれくらい頭を動かすか。\n EyesWeight : どれくらい目を動かすか。\n ClampWeight : 動きの最大値。\nAvatarControll\n LookAtObj : LookAtObjをドロップしたオブジェクトを指定してください。アバターの視線が追従します。\n WalkAtObj : WalkAtObjをドロップしたオブジェクトを指定してください。その位置にアバターが移動します。\n MinTime : ランダムなアニメーションが発生する周期の最小値です。\n MaxTime : ランダムなアニメーションが発生する周期の最大値です。\n\navatarAnimator : アバターのアニメーターにドロップしてください。\nIdle0が通常アニメーション、Idle1~4がランダムに発生するアニメーション。\nWalkが歩行アニメーションです。\n\n\n* by,HhotateA\n* Twitter :@HHOTATEA_VRC\n*\n* Date: 2018-04-25 開始","url":"https://booth.pm/ja/items/1332100","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"700"},"image":"https://booth.pximg.net/c/620x620/4fb745c3-074a-4dd3-a297-3f01ee3312c7/i/1332100/e6ed8c37-9ac7-45c9-9e59-76e8e8e4127e_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="UzYydgTQ8+q5iyXiYQXX3O6BWrvGl3tVktTSoefLCSM="></script>
+    nonce="UdfdUXtheXJ/oakPVsTlmm7/M6vnAUL3vs/UjqcVijg="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -549,9 +549,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
