--- a/VRChat/24/1331824.html
+++ b/VRChat/24/1331824.html
@@ -79,7 +79,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "TJIWKiUyX/CO0d+s3K7yOVtfzj5GVKpbH6cYI+MGaqk="></script>
+    "1vgNAIuw3aJeyhNAT+33V8xF9abUe/HHnxjCSvPaeVw="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"夢通じの鍵","description":"夢の世界の奥深くにあるとされる、どこかの世界へとつながる扉を開けるための鍵になります。\n鍵の管理にはくれぐれもご注意を……\n\n\n\n※設定はフィクションです\n　夢の中で見た鍵を再現してみました。\n　アクセサリーとして身につけてみたり、ワールドに使用したりなど、お好みでご使用ください。\n\n\n\n\n～内容物～\n・unitypackage\n・FBX\n・テクスチャ、psdデータ\n\n\n\n★利用規約・導入などの説明はこちらをご覧ください。（ページ下部から該当シートを選んでください）\nhttps://docs.google.com/spreadsheets/d/1DCh-S5Rafb_NYJTQHtXame5xNWiDTWg5RKkcSiIdyXA/edit?usp=sharing","url":"https://booth.pm/ja/items/1331824","offers":{"priceCurrency":"JPY","@type":"Offer","price":"500"},"image":"https://booth.pximg.net/c/620x620/42ee0553-4a9c-4ab5-8673-ebcc9fd6f0be/i/1331824/b9c5c76b-62ec-4785-9d36-50217d6a10ae_base_resized.jpg"}
     </script>
@@ -93,7 +93,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="TJIWKiUyX/CO0d+s3K7yOVtfzj5GVKpbH6cYI+MGaqk="></script>
+    nonce="1vgNAIuw3aJeyhNAT+33V8xF9abUe/HHnxjCSvPaeVw="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -459,9 +459,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
